--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ section{padding:50px 100px;}
 }
 .hover-scan{
     position: absolute;
-    top:100px;
+    top:10px;
     right:10px;
     background-color:red;
     padding:35px 18px;
@@ -370,3 +370,69 @@ section{padding:50px 100px;}
   [data-aos="rotate-c"].aos-animate {
     transform: rotate(20deg);
   }
+  .row p{
+    font-family: cursive;
+  }
+  .row h3{
+    color: darkred;
+    font-family: monospace;
+  }
+  .social
+  {
+
+  }
+  /* contact page */
+ .box {
+    margin: auto
+}
+
+.card {
+    padding: 8%;
+    padding-top: 35px;
+    margin-top: 60px;
+    margin-bottom: 80px
+}
+
+textarea[name="message"] {
+    resize: none
+}
+
+#e-mail {
+    height: 45px
+}
+
+#message {
+    height: 120px
+}
+
+input.input-box,
+textarea.input-box {
+    background-color: #616161;
+    border: #616161;
+    color: #BDBDBD
+}
+
+input.input-box:focus,
+textarea.input-box:focus {
+    background-color: #000000;
+    color: #BDBDBD
+}
+
+.rm-border:focus {
+    border-color: inherit;
+    -webkit-box-shadow: none;
+    box-shadow: none
+}
+
+form .form-control::-webkit-input-placeholder {
+    color: #9E9E9E
+}
+
+::-moz-placeholder {
+    color: #9E9E9E !important
+}
+
+input.btn-purple {
+    background-color: #5C6BC0;
+    color: #ffffff
+}
